# qwery-sdk-python

./: .gitignore  README.md  pyproject.toml
qwery_sdk/: __init__.py  client.py  errors.py  types.py
